rules/ingress-and-egress-blocked/test/default-policy/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: test
    namespace: my-ns
spec:
      containers:
      - args:
        - server
        env:
          - name: BASE_HREF
            value: /argo/
        image: test:latest
        name: test
        imagePullPolicy: Never
      - name : test2
        image : test
